--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -4,7 +4,7 @@
   "author": "Kevin X",
   "version": "0.1.0",
   "private": true,
-  "main": "public/electron.js",
+  "main": "main-process/electron.js",
   "dependencies": {
     "@types/jest": "24.0.21",
     "@types/node": "12.12.3",
@@ -21,6 +21,8 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "typescript": "3.6.4",
     "wait-on": "^3.3.0"
   },
