Send verification email to account associated email after signup with hard coded value temporarily

--- a/dietstory-routing/DietStory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/DietStory-routing/dietstory_secret_config_template.json
@@ -9,5 +9,11 @@
 	        "HOST": "<HOSTNAME>",
 	        "PORT": "<PORT>"
 	    }
-	}
+	},
+	"EMAIL_BACKEND": "<DJANGO_EMAIL_BACKEND>",
+    "EMAIL_HOST": "<EMAIL_HOST>",
+    "EMAIL_PORT": "<PORT>",
+    "EMAIL_HOST_USER": "<EMAIL>",
+    "EMAIL_HOST_PASSWORD": "<PASSWORD>",
+    "EMAIL_USE_TLS": "<True/False>"
 }
