[FIX] Ignoring all pycache instances

--- a/dietstory-routing/DietStory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/DietStory-routing/dietstory_secret_config_template.json
@@ -9,5 +9,15 @@
 	        "HOST": "<HOSTNAME>",
 	        "PORT": "<PORT>"
 	    }
+	},
+	"TEST_DATABASES": {
+	    "<ENTRY_NAME>": {
+	        "ENGINE": "<DJANGO_DB_ENGINE>",
+	        "NAME": "<SCHEMA_NAME>",
+	        "USER": "<USERNAME>",
+	        "PASSWORD": "<PASSWORD>",
+	        "HOST": "<HOSTNAME>",
+	        "PORT": "<PORT>"
+	    }
 	}
 }
