--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -10,14 +10,20 @@
 	        "PORT": "<PORT>"
 	    }
 	},
+	"EMAIL_BACKEND": "<DJANGO_EMAIL_BACKEND>",
+	"EMAIL_HOST": "<EMAIL_HOST>",
+	"EMAIL_PORT": "<PORT>",
+	"EMAIL_HOST_USER": "<EMAIL>",
+	"EMAIL_HOST_PASSWORD": "<PASSWORD>",
+	"EMAIL_USE_TLS": "<True/False>",
 	"TEST_DATABASES": {
-	    "<ENTRY_NAME>": {
-	        "ENGINE": "<DJANGO_DB_ENGINE>",
-	        "NAME": "<SCHEMA_NAME>",
-	        "USER": "<USERNAME>",
-	        "PASSWORD": "<PASSWORD>",
-	        "HOST": "<HOSTNAME>",
-	        "PORT": "<PORT>"
+		"<ENTRY_NAME>": {
+			"ENGINE": "<DJANGO_DB_ENGINE>",
+			"NAME": "<SCHEMA_NAME>",
+			"USER": "<USERNAME>",
+			"PASSWORD": "<PASSWORD>",
+			"HOST": "<HOSTNAME>",
+			"PORT": "<PORT>"
 	    }
 	}
 }
