Adding game asset manager

--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -16,6 +16,9 @@
 	"EMAIL_HOST_USER": "<EMAIL>",
 	"EMAIL_HOST_PASSWORD": "<PASSWORD>",
 	"EMAIL_USE_TLS": "<True/False>",
+	"AWS_ACCESS_KEY_ID": "<AWS_ACCESS_ID>",
+	"AWS_SECRET_ACCESS_KEY": "<AWS_SECRET_KEY>",
+	"AWS_STORAGE_BUCKET_NAME": "<AWS_STORAGE_BUCKET_NAME>",
 	"TEST_DATABASES": {
 		"<ENTRY_NAME>": {
 			"ENGINE": "<DJANGO_DB_ENGINE>",
