--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -11,6 +11,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.2",
+    "app-module-path": "^2.2.0",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "electron": "^7.0.0",
