--- a/electron/launcher/tsconfig.json
+++ b/electron/launcher/tsconfig.json
@@ -21,6 +21,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "baseUrl": "./src/",
     "jsx": "react"
   },
   "include": [
