--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "launcher",
+  "name": "Dietstory",
   "description": "Launches Dietstory, auto-update files, register/login, etc...",
   "author": "Kevin X",
   "version": "0.1.0",
