--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.2",
     "app-module-path": "^2.2.0",
+    "bootstrap": "^4.4.0",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "electron": "^7.0.0",
