--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -19,6 +19,7 @@
     "electron": "^7.0.0",
     "electron-builder": "^22.1.0",
     "electron-is-dev": "^1.1.0",
+    "fs-extra": "^8.1.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
