--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -12,14 +12,16 @@
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.2",
     "app-module-path": "^2.2.0",
-    "bootstrap": "^4.4.0",
     "async": "^3.1.0",
+    "bootstrap": "^4.4.0",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "electron": "^7.0.0",
     "electron-builder": "^22.1.0",
     "electron-is-dev": "^1.1.0",
+    "fs-extra": "^8.1.0",
     "node-sass": "^4.13.0",
+    "qs": "^6.9.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
