--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,12 @@ version: 2
 jobs:
   build:
     machine: true # Build using our custom docker build image
-    working_directory: ./dietstory-routing
     
     steps:
       - checkout # check out the code in the project directory
       - run: # Run Dietstory Django Server Tests
           name: Run Dietstory Django Server Tests
+          path: dietstory-routing
           command: |
             docker run -v $(pwd):/mnt -p 8000:8000 benjixd/dietstory-django-tests
       - store_artifacts:
