--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -1,5 +1,8 @@
 {
 	"SECRET_KEY": "<MY_SECRET_KEY>",
+	"ALLOWED_HOSTS": [
+		"<IP ADDR>",
+	],
 	"DATABASES": {
 		"<ENTRY_NAME>": {
 			"ENGINE": "<DJANGO_DB_ENGINE>",
