Updating config.yml to run build pipeline against branches that start with 'chore/.*'.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ protected-only: &protected-only
         - release
         - /feature[/].*/
         - /fix[/].*/
-        - /chore[/]./
+        - /chore[/].*/
         - /deploy[/].*/
 
 version: 2
