--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -18,6 +18,7 @@
 		"AWS_ACCESS_KEY_ID": "<AWS_ACCESS_ID>",
 		"AWS_SECRET_ACCESS_KEY": "<AWS_SECRET_KEY>",
 		"AWS_STORAGE_BUCKET_NAME": "<AWS_STORAGE_BUCKET_NAME>",
+		"AWS_STORAGE_ROOT_FOLDER": "<AWS_BUCKET_ROOT_FOLDER>",
 		"AWS_DEFAULT_REGION": "<AWS_DEFAULT_REGION>",
 	},
 	"EMAIL_BACKEND": "<DJANGO_EMAIL_BACKEND>",
