--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,10 @@ jobs:
     
     steps:
       - checkout # check out the code in the project directory
+      - run: 
+          name: Build Dietstory Django
+          command: |
+            docker build -t benjixd/dies
       - run: # Run Dietstory Django Server Tests
           name: Run Dietstory Django Server Tests
           path: dietstory-routing
