Rearranged dockerfile locations.

--- a/dietstory-routing/Dockerfile.prod
+++ b/dietstory-routing/Dockerfile.prod
@@ -6,11 +6,9 @@ ENV CONFIG_DIR=/tmp/config/
 
 # Add Project Requirements
 COPY requirements.txt ${CONFIG_DIR}
+COPY ../* /app
 
-# Copy Project source code
-COPY . /code
-
-WORKDIR /code
+WORKDIR /app
 
 # Install Python Packages Dependencies
 RUN apk add --no-cache build-base \
@@ -18,5 +16,5 @@ RUN apk add --no-cache build-base \
 	&& pip install --no-cache-dir -r ${CONFIG_DIR}/requirements.txt \
 	&& apk del build-base
 
-# Run Django project
+# Run mounted Django project
 CMD python -u manage.py runserver 0.0.0.0:8000 --noreload
