--- a/dietstory-routing/Dockerfile.test
+++ b/dietstory-routing/Dockerfile.test
@@ -17,6 +17,7 @@ RUN mkdir /code
 WORKDIR /code
 COPY . /code/
 
+# Generate config file for tests
 RUN echo '{ \
 		"SECRET_KEY": "hello_world", \
 		"DEBUG": true, \
