Fixing syntax errors.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,11 +34,11 @@ jobs:
       - run: 
           name: Build Dietstory Django Prod
           command: |
-            docker build -t benjixd/dietstory -f Dockerfile.prod .
+            docker build -t benjixd/dietstory -f client-launcher/Dockerfile.prod .
       - run:
           name: Build Dietstory Django Tests
           command: |
-            docker build -t benjixd/dietstory-django-tests -f Dockerfile.test
+            docker build -t benjixd/dietstory-django-tests -f client-launcher/Dockerfile.test
       - run: # Run Dietstory Django Server Tests
           name: Run Dietstory Django Server Tests
           path: dietstory-routing
