--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -31,6 +31,7 @@
     "qs": "^6.9.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-dropzone": "^10.2.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
