--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,15 @@ jobs:
             echo "Downloading dev SECRET_CONFIG_FILE.json from S3." && \
             aws s3 cp s3://dietstory-api-server-assets/dev/config/dietstory_secret_config.json \
                       dietstory-routing
+      -run:
+          name: Build Docker Image
+          command: |
+            echo "Building docker image" && \
+            docker build -t benjixd/dietstory-django -f Dockerfile.prod .
+      - run:
+         name: Clean up secrets
+         command: |
+            rm dietstory-routing/dietstory_secret_config.json
       - run:
           name: Build Docker Image
           command: |
