--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,15 @@ jobs:
     
     steps:
       - checkout # check out the code in the project directory
+      - run:
+          name:  Build Dietstory Django Server Test image
+          command: |
+            docker build -t benjixd/dietstory-django-tests -f Dockerfile.test .
       - run: # Run Dietstory Django Server Tests
           name: Run Dietstory Django Server Tests
           path: dietstory-routing
           command: |
-            docker run -v $(pwd):/mnt -p 8000:8000 benjixd/dietstory-django-tests
+            docker run -p 8000:8000 benjixd/dietstory-django-tests
       - persist_to_workspace: # Persist required files for deployment
           root: ~/project
           paths: dietstory-routing
