Update config_template to include log levels.

--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -1,6 +1,8 @@
 {
 	"SECRET_KEY": "<MY_SECRET_KEY>",
 	"DEBUG": false,
+    "LOG_LEVEL_DEV": "DEBUG",
+    "LOG_LEVEL_DEFAULT": "INFO",
 	"ALLOWED_HOSTS": [
 		"<IP ADDR>",
 	],
