Updating circleci config to also automatically run the build pipeline against reverted pull requests.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ protected-only: &protected-only
         - /fix[/].*/
         - /chore[/].*/
         - /deploy[/].*/
+        - /revert-.*/
 
 version: 2
 jobs:
