--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.2",
     "app-module-path": "^2.2.0",
     "async": "^3.1.0",
+    "axios": "^0.19.1",
     "bootstrap": "^4.4.0",
     "concurrently": "^5.0.0",
     "cookie": "^0.4.0",
@@ -25,6 +26,7 @@
     "electron-is-dev": "^1.1.0",
     "electron-log": "^4.0.0",
     "electron-updater": "^4.2.0",
+    "form-data": "^3.0.0",
     "fs-extra": "^8.1.0",
     "keytar": "^5.0.0",
     "node-sass": "^4.13.0",
