--- a/electron/launcher/package.json
+++ b/electron/launcher/package.json
@@ -25,12 +25,14 @@
     "electron-is-dev": "^1.1.0",
     "electron-log": "^4.0.0",
     "electron-updater": "^4.2.0",
+    "form-data": "^3.0.0",
     "fs-extra": "^8.1.0",
     "keytar": "^5.0.0",
     "node-sass": "^4.13.0",
     "qs": "^6.9.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-dropzone": "^10.2.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
