Adding disconnect feature.

--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -38,5 +38,7 @@
 			"HOST": "<HOSTNAME>",
 			"PORT": "<PORT>",
 		},
-	}
+	},
+	"DIESTORY_SERVER_HOST": "<DIESTORY_SERVER_HOST>",
+    "DIETSTORY_SERVER_PORT": "<DIESTORY_SERVER_IP"
 }
