Fixing typo in secret config template.

--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -39,6 +39,6 @@
 			"PORT": "<PORT>",
 		},
 	},
-	"DIESTORY_SERVER_HOST": "<DIESTORY_SERVER_HOST>",
-    "DIETSTORY_SERVER_PORT": "<DIESTORY_SERVER_IP"
+	"DIETSTORY_SERVER_HOST": "<DIETSTORY_SERVER_HOST>",
+    "DIETSTORY_SERVER_PORT": "<DIETSTORY_SERVER_PORT"
 }
