[FIX] - Config Template naming

--- a/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
+++ b/dietstory-routing/dietstory-routing/dietstory_secret_config_template.json
@@ -39,6 +39,6 @@
 			"PORT": "<PORT>",
 		},
 	},
-	"DIETSTORY_SERVER_HOST": "<DIETSTORY_SERVER_HOST>",
-    "DIETSTORY_SERVER_PORT": "<DIETSTORY_SERVER_PORT"
+	"DIETSTORY_API_HOST": "<DIETSTORY_API_HOST>",
+    "DIETSTORY_API_PORT": "<DIETSTORY_API_PORT>"
 }
