--- a/dietstory-routing/Dockerfile.prod
+++ b/dietstory-routing/Dockerfile.prod
@@ -19,4 +19,4 @@ RUN apk add --no-cache build-base \
 	&& apk del build-base
 
 # Run Django project
-CMD python -u manage.py runserver 0.0.0.0:8000 --noreload
+CMD gunicorn --timeout=30 --workers=4 --bind 0.0.0.0:8000 django_app.wsgi:application
