Adding dir path.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
       - run:
           name:  Build Dietstory Django Server Test image
           command: |
-            ls &&
-            docker build -t dietstory-django-tests -f dietstory-routing/Dockerfile.test .
+            cd dietstory-routing &&
+            docker build -t dietstory-django-tests -f Dockerfile.test .
       - run: # Run Dietstory Django Server Tests
           name: Run Dietstory Django Server Tests
           path: dietstory-routing
