--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - run:
           name:  Build Dietstory Django Server Test image
           command: |
-            cd dietstory-routing &&
+            cd dietstory-routing && \
             docker build -t dietstory-django-tests -f Dockerfile.test .
       - run: # Run Dietstory Django Server Tests
           name: Run Dietstory Django Server Tests
@@ -58,16 +58,17 @@ jobs:
           command: |
             echo "Downloading dev SECRET_CONFIG_FILE.json from S3." && \
             aws s3 cp s3://dietstory-api-server-assets/dev/config/dietstory_secret_config.json \
-                      dietstory-routing
+            dietstory-routing/dietstory-routing
       - run:
           name: Build Docker Image
           command: |
             echo "Building docker image" && \
+            cd dietstory-routing && \
             docker build -t dietstory-django -f Dockerfile.prod .
       - run:
          name: Clean up secrets
          command: |
-            rm dietstory-routing/dietstory_secret_config.json
+            rm dietstory-routing/dietstory-routing/dietstory_secret_config.json
       - run:
           name: Compress Artifacts
           command: |
@@ -101,16 +102,17 @@ jobs:
           command: |
             echo "Downloading prod SECRET_CONFIG_FILE.json from S3." && \
             aws s3 cp s3://dietstory-api-server-assets/prod/config/dietstory_secret_config.json \
-                      dietstory-routing
+            dietstory-routing/dietstory-routing
       - run:
          name: Build Docker image
          command: |
            echo "Building docker image" && \
+           cd dietstory-routing && \
            docker build -t dietstory-django -f Dockerfile.prod .
       - run:
          name: Clean up secrets
          command: |
-            rm dietstory-routing/dietstory_secret_config.json
+            rm dietstory-routing/dietstory-routing/dietstory_secret_config.json
       - run:
           name: Compress Artifacts
           command: |
