--- a/dietstory-routing/Dockerfile.prod
+++ b/dietstory-routing/Dockerfile.prod
@@ -1,6 +1,6 @@
 FROM python:3.7.5-alpine
 
-MAINTAINER Benjamin Zhao <yl4zhao@edu.uwaterloo.ca>
+LABEL maintainer="Benjamin Zhao <yl4zhao@edu.uwaterloo.ca>"
 
 ENV CONFIG_DIR=/tmp/config/
 
